tests/fixtures/compile-errors/instantiation-too-many-type-parameters/compile_error.nim
import strformat,options

import ../../../../src/macro-assertions
ErrorBase.TooManyTypeParameters